# claude

./: .gitignore  CLAUDE.md
.github/workflows/: test.yml
kata/: bowling_game.md  fizz_buzz.md  roman_numerals.md
skills/makefile-automation-basic/: Makefile  SKILL.md
skills/python-development/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SKILL.md  pyproject.toml  pyproject.toml.template
