[project]
name = "my-project"
version = "0.1.0"
description = "A short description of my project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Add runtime dependencies here
    # "requests>=2.32",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=8.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a1",
]

[tool.uv]
# Required to install pre-release packages like ty (alpha)
prerelease = "if-necessary-or-explicit"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]   # allow assert in tests
"*_test.py" = ["S101"]   # allow assert in tests

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
norecursedirs = [".venv", ".tools", "dist", "build"]

[tool.ty]
# See https://github.com/astral-sh/ty for configuration options
